--- a/index.html
+++ b/index.html
@@ -4,25 +4,24 @@
 		<title>Test Website</title>
 	</head>
 	<body>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Test Website</h1>
+				<p>More will come soon! :)</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there!</h1>
-				<p>Hi!</p>
+				<p>You have found my webpage. Too bad nothing is on it currently. :(</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:nick.b.321890@gmail.com">email</a></li>
-        		<li><a href="https://github.com/BsnNick">github.com/BsnNick</a></li>
-			</ul>
 		</footer>
 	</body>
 </html>
