--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     		<div class="blurb">
         		<h1>Test Website</h1>
 				<p>More will come soon! :)</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+		</div>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -19,8 +19,8 @@
     		<div class="blurb">
         		<h1>Hi there!</h1>
 				<p>You have found my webpage. Too bad nothing is on it currently. :(</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+		</div>
 		<footer>
 		</footer>
 	</body>
