--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
     		<div class="blurb">
         		<h1>Test Website</h1>
 				<p>More will come soon! :)</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+		</div>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
     		</ul>
 		</nav>
-		<div class="container">
+        <div class="container">
     		<div class="blurb">
-        		<h1>Hi there!</h1>
-				<p>You have found my webpage. Too bad nothing is on it currently. :(</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+        		<h1>PinkScreenSimulator! Downloads:</h1>
+				<p>
+                    <a href="yourfile.xxx" target="_blank"><img border="0" src="yourimg.xxx" alt="yourimage">
+                   </a>
+                </p>
+    		</div>
+		</div>
+        <div>&nbsp;</div>
+        <a href="PinkScreenSimulator!.jar" target="_blank">'''word'''</a>"
+        <div>&nbsp;</div>
+        <div>&nbsp;</div>
 		<footer>
 		</footer>
 	</body>
