--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     		<div class="blurb">
         		<h1>PinkScreenSimulator! Downloads:</h1>
 				<p>
-                    <a href="yourfile.xxx" target="_blank"><img border="0" src="yourimg.xxx" alt="yourimage">
-                   </a>
                 </p>
     		</div>
 		</div>
         <div>&nbsp;</div>
-        <a href="PinkScreenSimulator!.jar" target="_blank">'''word'''</a>"
+        <p>v1.0: ></p>
+        <a href="PinkScreenSimulator!.jar" target="_blank">'''PinkScreenSimulator!.jar'''</a>"
         <div>&nbsp;</div>
         <div>&nbsp;</div>
 		<footer>
