--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     		</div>
 		</div>
         <div>&nbsp;</div>
-        <p>v1.0: ></p>
-        <a href="PinkScreenSimulator!.jar" target="_blank">'''PinkScreenSimulator!.jar'''</a>"
+        <p>v1.0: <a href="PinkScreenSimulator!.jar" target="_blank">PinkScreenSimulator!.jar</a>"</p>
         <div>&nbsp;</div>
         <div>&nbsp;</div>
 		<footer>
