--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
                 </p>
     		</div>
 		</div>
+        <p>v1.0: <a href="PinkScreenSimulator!.jar" target="_blank">PinkScreenSimulator!.jar</a></p>
         <div>&nbsp;</div>
-        <p>v1.0: <a href="PinkScreenSimulator!.jar" target="_blank">PinkScreenSimulator!.jar</a>"</p>
+        <p>v1.1: <a href="PinkScreenSimulator! v1.1.jar" target="_blank">PinkScreenSimulator! v1.1.jar</a></p>
+        <div>&nbsp;</div>
+        <p>v1.1.1: <a href="PinkScreenSimulator! v1.1.1.jar" target="_blank">PinkScreenSimulator! v1.1.1.jar</a></p>
         <div>&nbsp;</div>
         <div>&nbsp;</div>
+        <p>Changelog coming soon!</p>
 		<footer>
 		</footer>
 	</body>
