--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p>v1.0: <a href="PinkScreenSimulator!.jar" target="_blank">PinkScreenSimulator!.jar</a></p>
         <p>v1.1: <a href="PinkScreenSimulator! v1.1.jar" target="_blank">PinkScreenSimulator! v1.1.jar</a></p>
         <p>v1.1.1: <a href="PinkScreenSimulator! v1.1.1.jar" target="_blank">PinkScreenSimulator! v1.1.1.jar</a></p>
+        <p>v1.2: <a href="PinkScreenSimulator! v1.2.jar" target="_blank">PinkScreenSimulator! v1.2.jar</a></p>
         <div>&nbsp;</div>
         <div>&nbsp;</div>
         <p>Changelog coming soon!</p>
