Updating index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test Website</title>
+		<title>000Nick's Official Website</title>
 	</head>
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Test Website</h1>
+        		<h1>Website is under construction!</h1>
 				<p>More will come soon! :)</p>
     		</div>
 		</div>
@@ -26,6 +26,7 @@
         <p>v1.1: <a href="PinkScreenSimulator! v1.1.jar" target="_blank">PinkScreenSimulator! v1.1.jar</a></p>
         <p>v1.1.1: <a href="PinkScreenSimulator! v1.1.1.jar" target="_blank">PinkScreenSimulator! v1.1.1.jar</a></p>
         <p>v1.2: <a href="PinkScreenSimulator! v1.2.jar" target="_blank">PinkScreenSimulator! v1.2.jar</a></p>
+        <p>v1.2.1: <a href="PinkScreenSimulator! v1.2.1.jar" target="_blank">PinkScreenSimulator! v1.2.1.jar</a></p>
         <div>&nbsp;</div>
         <div>&nbsp;</div>
         <p>Changelog coming soon!</p>
