--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>000Nick's Official Website</title>
 	</head>
 	<body>
+    
+<body background="background.jpg" bgcolor="#333333"> 
 		<div class="container">
     		<div class="blurb">
         		<h1>Website is under construction!</h1>
