--- a/repo/index.html
+++ b/repo/index.html
@@ -1,9 +1,7 @@
-<div id="title">H6nry's Cydia repo</div>
+<div id="title">000Nick's Cydia repo</div>
 <div id="content">
-This is my Cydia repo.<br>
-Feel free to add it to your list! Maybe some awesome stuff waits for you here ;)<br>
-http://h6nry.github.io/repo/<br>
-<a href="cydia://sources/">OPEN CYDIA!</a>
+Welcome to 000Nick's Cydia Repository!<br>
+<a href="cydia://sources/">Tap here to go to Cydia</a>
 </div>
 
 <!-- include this everywhere you want the standard design template from here... -->
