--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 	</head>
 	<body>
     
-<body background="background.jpg" bgcolor="#333333"> 
+<body> 
 		<div class="container">
     		<div class="blurb">
         		<h1>Website is under construction!</h1>
 				document.writedocument.getElementById("phone1").value + document.getElementById("phone2").value + document.getElementById("phone3").value;
+				<p><body background="background.jpg" bgcolor="#333333"></p>
     		</div>
 		</div>
 		<nav>
