--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     		<div class="blurb">
         		<h1>Website is under construction!</h1>
 				document.writedocument.getElementById("phone1").value + document.getElementById("phone2").value + document.getElementById("phone3").value;
-				<p><body background="background.jpg" bgcolor="#333333"></p>
+				body background="background.jpg" bgcolor="#333333"
     		</div>
 		</div>
 		<nav>
