--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 		var text, width, container;
 		width = "200px";        // set this to whatever you like
-		text = 'TEST!'
+		text = "TEST!"
 		
 		// you can create a <div id="text-container"></div> in your
 		// HTML wherever you want the text to show up, or you can
