--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
 <body> 
 		<div class="container">
-    		<div class="blurb">
+    		<div class="blurb" id="text-container">
         		<h1>Website is under construction!</h1>
 				document.writedocument.getElementById("phone1").value + document.getElementById("phone2").value + document.getElementById("phone3").value;
 				// body background="background.jpg" bgcolor="#333333"
