--- a/news.html
+++ b/news.html
@@ -1,6 +1,10 @@
 <html>
   <!-- HTML noob. Pls no h8. -->
-  <head><title>News</title></head>
+  <head>
+    <title>News</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  </head>
   
   <body>
     <div>
