--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   
-  <body>
+  <body bgcolor="#fafafa">
     <div>
 	  <b style="font-size:24px">
 		Beta Testing
