--- a/news.html
+++ b/news.html
@@ -6,6 +6,12 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   
+  <style>
+    html {
+    -webkit-user-select: none;
+    }
+  </style>
+  
   <body bgcolor="#fafafa">
     <div>
 	  <b style="font-size:24px">
