--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
 	  <br>
 	  <small>
 		FuriousMC is under beta testing as of now.
-		Many features will be broken or unsuable.
+		Many features will be broken or unusable.
 		Please report any bugs on the forums.
 	  </small>
     </div>
