--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>000Nick's Official Website</title>
-	</head>
-	<body>
-	</body>
+  <head>
+    <title>000Nick's Official Website</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </head>
+  <body align="center">
+    <b>Website coming soon!</b>
+  </body>
 </html>
