--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
   <head>
     <title>000Nick's Official Website</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <!--<link rel="stylesheet" type="text/css" href="stylesheet.css">-->
   </head>
   <body align="center">
+    <header>
+      <div class="underlay tap" style="background:
+	      linear-gradient(
+		        limegreen,
+	          transparent
+	      ),
+	      linear-gradient(
+		        90deg,
+		        skyblue,
+	        	transparent
+   	    ),
+	      linear-gradient(
+		        -90deg,
+		        coral,
+		        transparent
+	      );
+	
+      background-blend-mode: screen;">
+      </div>
+    </header>
     <b>Website coming soon!</b>
   </body>
 </html>
