--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>000Nick's Official Website</title>
     <!--<link rel="stylesheet" type="text/css" href="stylesheet.css">-->
-  </head>
-  <body align="center">
-    <header>
-      <div class="underlay tap" style="background:
+    <style>
+      #gradientBg {
+      	background:
 	      linear-gradient(
 		        limegreen,
 	          transparent
@@ -22,7 +21,14 @@
 		        transparent
 	      );
 	
-      background-blend-mode: screen;">
+      background-blend-mode: screen;
+      }
+    </style>
+  </head>
+  <body align="center">
+    <header>
+      <div id="gradientBg">
+      	Test
       </div>
     </header>
     <b>Website coming soon!</b>
