--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
       }
     </style>
   </head>
-  <body align="center">
-    <header>
-      <div id="gradientBg">
-      	Test
-      </div>
-    </header>
+  <body align="center" id="gradientBg">
     <b>Website coming soon!</b>
   </body>
 </html>
