--- a/index.html
+++ b/index.html
@@ -3,28 +3,8 @@
   <head>
     <title>000Nick's Official Website</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <style>
-      #gradientBg {
-      	background:
-	      linear-gradient(
-		        limegreen,
-	          transparent
-	      ),
-	      linear-gradient(
-		        90deg,
-		        skyblue,
-	        	transparent
-   	    ),
-	      linear-gradient(
-		        -90deg,
-		        coral,
-		        transparent
-	      );
-	
-      background-blend-mode: screen;
-      }
-    </style>
   </head>
-  <body>
+  <body class="gradientBg">
+    test
   </body>
 </html>
