--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <title>000Nick's Official Website</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-  <body class="gradientBg">
-    test
+  <body>
+    <div class="underlay top" style="background:
+	    linear-gradient(
+  		    limegreen,
+	   	    transparent
+	    ),
+    	linear-gradient(
+	       	90deg,
+	       	skyblue,
+		      transparent
+	    ),
+	    linear-gradient(
+		      -90deg,
+		      coral,
+		      transparent
+	    );
+	    background-blend-mode: screen;">
+    </div>
   </body>
 </html>
