--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
-    <div class="underlay top" style="background:
+    <div class="background top" style="background:
 	    linear-gradient(
   		    limegreen,
 	   	    transparent
