--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
-    <div class="background top" style="background:
+    <div class="container background-container flex">
+      <div class="background top" style="background:
 	    linear-gradient(
   		    limegreen,
 	   	    transparent
@@ -21,6 +22,7 @@
 		      transparent
 	    );
 	    background-blend-mode: screen;">
+    </div>
     </div>
   </body>
 </html>
