--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html class="go">
   <head>
     <title>000Nick's Official Website</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
     <div class="container background-container flex">
-      <div class="background top" style="background:
+      <div class="title">
+      	<div class="background top" style="background:
 	    linear-gradient(
   		    limegreen,
 	   	    transparent
 	    ),
-    	linear-gradient(
+    	    linear-gradient(
 	       	90deg,
 	       	skyblue,
 		      transparent
@@ -22,7 +23,8 @@
 		      transparent
 	    );
 	    background-blend-mode: screen;">
-    </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
