--- a/index.html
+++ b/index.html
@@ -2,46 +2,8 @@
 <html class="go">
   <head>
     <title>000Nick's Official Website</title>
-    <link rel="stylesheet" type="text/css" href="http://bennettfeely.com/gradients/style.min.css">
   </head>
-  <body>
-    <div class="underlay tap" style="background:
-	linear-gradient(
-		limegreen,
-		transparent
-	),
-	linear-gradient(
-		90deg,
-		skyblue,
-		transparent
-	),
-	linear-gradient(
-		-90deg,
-		coral,
-		transparent
-	);
-	
-background-blend-mode: screen;"></div>
-    <div class="container background-container flex">
-      <div class="title">
-      	<div class="background top" style="background:
-	    linear-gradient(
-  		    limegreen,
-	   	    transparent
-	    ),
-    	    linear-gradient(
-	       	90deg,
-	       	skyblue,
-		      transparent
-	    ),
-	    linear-gradient(
-		      -90deg,
-		      coral,
-		      transparent
-	    );
-	    background-blend-mode: screen;">
-        </div>
-      </div>
-    </div>
+  <body align="center">
+    <b>Website coming soon!</b>
   </body>
 </html>
