--- a/news.html
+++ b/news.html
@@ -2,5 +2,17 @@
 <html>
   <head>
     <title>News</title>
+    <style>
+      .noselect
+      {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+  </style>
   </head>
+  <body bgcolor="#fafafa" class="noselect" />
 </html>
