--- a/news.html
+++ b/news.html
@@ -14,5 +14,11 @@
       }
   </style>
   </head>
-  <body bgcolor="#fafafa" class="noselect" />
+  <body bgcolor="#fafafa" class="noselect">
+     <center>
+       <h1>
+         Coming Soon
+       </h1>
+     </center>
+  </body>
 </html>
