--- a/news.html
+++ b/news.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <title>News</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
     <style>
+      body
+      {
+        font-family: Roboto, sans-serif;
+      }
+      
       .noselect
       {
         -webkit-touch-callout: none;
