--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   </head>
   <body align="center">
     <b>Website coming soon!</b>
+    <br><br><br>
+    <img src="C:\$MFT\test" alt=":D" width="50" height="50">
   </body>
 </html>
