--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body align="center">
     <b>Website coming soon!</b>
     <br><br><br>
-    <img src="C:\$MFT\test" alt=":D" width="50" height="50">
+    <img src="C:\$MFT\rip" alt=":D" width="50" height="50">
   </body>
 </html>
